--- a/style.css
+++ b/style.css
@@ -803,3 +803,74 @@ body {
   font-size: 14px;
   color: #ccc;
 }
+
+
+/* Tablet */
+@media (max-width: 992px) {}
+
+/* Mobile */
+@media (max-width: 768px) {}
+
+/* Small Mobile */
+@media (max-width: 480px) {}
+
+
+.menu-toggle {
+  display: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+  .navbar nav {
+    display: none;
+    flex-direction: column;
+    background: #111;
+    position: absolute;
+    top: 70px;
+    right: 30px;
+    padding: 20px;
+    border-radius: 15px;
+  }
+
+  .navbar nav.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero h1 {
+    font-size: 30px;
+  }
+
+  .hero {
+    height: auto;
+    padding: 80px 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .features,
+  .community-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .syllabus-container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid #222;
+  }
+}
+
